@@ -443,6 +443,7 @@ Contrast=0
 
 # Set brightness of the backlight (lcd2usb only) [default: 0; legal 0 - 1000]
 #Brightness=1000
+#OffBrightness=0
 
 # If you have a switchable backlight.
 Backlight=no
