@@ -37,6 +37,7 @@ v.0.5dev (ongoing development)
  * server core: display values in menu for all input MenuEntry types
  * hd44780 driver: reorganize ConnectionType recognition
  + hd44780 driver: new ConnectionType mplay
+ + hd44780 driver: get/set contrast & brightness support for lcd2usb (M. Dolze)
 
 v.0.5.2
  * fix switching on/off the Load screen in lcdproc client using the menu
